--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
           </div>
           <div class="weather-app-temperature-container">
             <div id="icon"></div>
-            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weather-app-temperature" id="temperature">
+              Welcome to MyWeatherApp
+            </div>
             <div class="weatehr-app-unit">°C</div>
           </div>
         </div>
